infrastructure/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: fintech
  labels:
    name: fintech
    environment: development
